css/style.css
/* ... */
/**
 * Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */

progress {
  vertical-align: baseline;
}

/**
 * Remove the default vertical scrollbar in IE 10+.
 */

textarea {
  overflow: auto;
}

/**
 * 1. Add the correct box sizing in IE 10.
 * 2. Remove the padding in IE 10.
 */

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}

/**
 * Correct the cursor style of increment and decrement buttons in Chrome.
 */

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

/**
 * 1. Correct the odd appearance in Chrome and Safari.
 * 2. Correct the outline style in Safari.
 */

[type="search"] {
  -webkit-appearance: textfield; /* 1 */
  outline-offset: -2px; /* 2 */
}

/**
 * Remove the inner padding in Chrome and Safari on macOS.
 */

[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

/**
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Change font properties to `inherit` in Safari.
 */

::-webkit-file-upload-button {
  -webkit-appearance: button; /* 1 */
  font: inherit; /* 2 */
}

/* Interactive
   ========================================================================== */

/*
 * Add the correct display in Edge, IE 10+, and Firefox.
 */

details {
  display: block;
}

/*
 * Add the correct display in all browsers.
 */

summary {
  display: list-item;
}

/* Misc
   ========================================================================== */

/**
 * Add the correct display in IE 10+.
 */

template {
  display: none;
}

/**
 * Add the correct display in IE 10.
 */

[hidden] {
  display: none;
}

/*------------------------------------------------------------------------*/
/* !! Own styling starts here !! */
body, html {
  margin: 0;
  padding: 0;
  font-family: Arial;
  color: #532A17;
}

 /* Mobile device screen */
@media screen and (max-width: 700px){
  /* Logo and Navigation Container */
  .logo-nav-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 30px;
    margin-bottom: 64px;
  }

  .divider-1 {
    width: 100%;
    border-bottom: 1px solid black;
    padding: 15px 0; /* Spacing for the container */
    margin: 18px 0px; /* Space around the divider */
  }

  .divider-2 {
    width: 100%;
    border-top: 1px solid black;
    padding: 15px 0; /* Spacing for the container */
    margin: 18px 0px; /* Space around the divider */
  }

  /* Navigation Styling */
  nav {
    display: flex;
    justify-content: center;
    margin: 0;
    padding: 0;
    width: 100%;
  }

  .navigation {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex; /* Display nav items in a row */
    gap: 0px;
    justify-content: center;
    width: auto;
  }

  .flex-item {
    flex: 0 45%;
}
}
/*------------------------------------------------------------------------*/
/* Logo & Navigation */
.logo-nav-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 10px;
  height: 100px;
}

.logo {
  max-height: 80px;
  max-width: 100%;
  padding: 0 40px; 
  display: block;
}

/* Navigation */
nav {
  display: flex; 
  justify-content: flex-end;
  width: auto;
}

.navigation {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  gap: 5px;
}

.navlist a {
  text-decoration: none;
  color: grey;
  font-weight: bold;
  font-size: 16px;
  padding: 10px 15px 10px 15px;
  transition: background-color 0.3s ease;
  white-space: nowrap;
}

.navlist a:hover {
  background-color: rgb(234, 234, 234);
  border-radius: 5px;
}

/*------------------------------------------------------------------------*/
/* General styling */
.mainimg {
  width: 100%;
  display: block;
}

.notice {
  padding: 15px;
}

section {
  width: 100%;
  background-color: #F0ECE9;
}

div.title {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100px;
  background-color: #532b1d;
}

h1, h2, h3, h4 {
  color: white;
  text-align: center;
}

h2.menutitle {
  display: flex;
  justify-content: left;
  align-items: center;
  padding-left:20px;
  height: 100px;
  background-color: #532b1d
}

/*------------------------------------------------------------------------*/
/* Home/Index */
.home-container {
  display: flex;
  justify-content: center;
  width: 100%;
  padding: 0 20px;
}

/* View More Button & Container */
.view-more-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 20px; /* Space btwn button and first image */
}

button {
  background-color: #532b1d;
  color: white;
  border: none;
  padding: 15px 25px;
  font-size: 16px;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

button:hover {
  background-color: #3e1c14;
}

/* Cake Pictures & Text */
.flex-item {
  padding: 10px;
  flex-basis: 15%;
  display: flex;
  flex-direction: column;
  min-height: 250px;
}

.flex-item img {
  width: 100%;
  max-width: 250px;
  height: auto;
  margin: 0 10px;
}

.flex-info {
  max-width: 250px;
  flex-grow: 1; 
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.flex-info p {
  margin: 0 8px;
  padding: 15px 0;
}

/*------------------------------------------------------------------------*/
/* Menu */
.menu-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: flex-start;
  width: 100%;
  padding: 0 10px;
}

.menu-item {
  padding: 10px;
  display: flex;
  flex-direction: column;
  min-height: 200px;
  width: 20%;
  margin: 10px;
}

.menu-item img {
  width: 100%;
  max-width: 350px;
  height: auto;
  margin: 0 10px;
}

.menu-info {
  max-width: 250px;
  flex-grow: 1; 
  padding: 10px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.menu-info p {
  margin: 5px 0;
}

.item-name {
  font-weight: bold;
}
/* ... */

